# women-s-and-men-s-clothing-store

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  pyproject.toml
core/: manage.py
core/accounts/: urls.py
core/blog/: admin.py  models.py  urls.py  views.py
core/blog/migrations/: 0001_initial.py  0002_alter_post_table.py  0003_alter_post_slug.py
core/project/: urls.py
core/project/settings/: base.py  dev.py  prod.py
core/project/settings/utils/: __init__.py
core/shop/: admin.py  models.py  urls.py  views.py
core/shop/migrations/: 0001_initial.py  0002_alter_category_name.py
core/templates/: base.html  index.html
core/templates/account/: login.html  profile.html  signup.html
core/templates/auth/: modal_login.html  modal_register.html
core/templates/base/_incl/: _footer.html  _header.html  _navbar.html  _newslatter.html  _pagination.html
core/templates/blog/: blog-details.html  blog-list.html
core/templates/shop/: index_shop.html
